# docker-build-stack

./: .gitignore  .travis.yml  README.md  build.sh
cmake/test/: CMakeLists.txt
gcc/Dockerfile/: Dockerfile
gcc/test/: CMakeLists.txt  gcc-test  main.cpp
mitk/Dockerfile/: CMakeLists.txt  Dockerfile  MITK.cmake
qt/test/: CMakeLists.txt  main.cpp
